# Blood_Donation_Backend

./: .env.example  .gitignore  README.md  api_integration_guide.md  pyproject.toml
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  blood_banks.py  blood_requests.py  donations.py  (+4 more)
app/core/: constants.py  exceptions.py  middleware.py  rate_limiter.py  security.py
app/integrations/: email.py  geocoding.py  storage.py
app/models/: __init__.py  audit_log.py  blood_bank.py  blood_request.py  donation.py  donor.py  hospital.py  match.py  notification.py  user.py
app/repositories/: __init__.py  base.py  blood_bank_repo.py  donation_repo.py  donor_repo.py  match_repo.py  notification_repo.py  request_repo.py  user_repo.py
app/schemas/: auth.py  blood_bank.py  blood_request.py  donation.py  donor.py  match.py  user.py
app/services/: __init__.py  analytics_service.py  auth_service.py  blood_bank_service.py  donor_service.py  eligibility_service.py  geolocation_service.py  matching_service.py  notification_service.py  request_service.py
app/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  email_tasks.py  matching_tasks.py  reminder_tasks.py
app/websocket/: __init__.py  events.py  manager.py
migrations/: env.py
migrations/versions/: ab4d0fbdfcaf_initial_migration.py
templates/email/: blood_request_alert.html  donation_reminder.html  emergency_alert.html  otp_verification.html  welcome.html
tests/: conftest.py  test_auth.py  test_donors.py  test_matching.py  test_requests.py
