[project]
name = "lifedrop-backend"
version = "1.0.0"
description = "Production-grade healthcare platform backend for LifeDrop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.14.4",
    "alembic>=1.13.1",
    "redis>=5.0.2",
    "celery>=5.3.6",
    "flower>=2.0.1",
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.4",
    "structlog>=24.1.0",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
